other-vpol/check-env-vars/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata: {name: check-env-vars-exceptions}
policies: [../check-env-vars.yaml]
resources: [../.kyverno-test/resource.yaml]
exceptions: [exceptions.yaml]
results:
- {kind: Pod, policy: check-env-vars, resources: [pod-with-opa-enabled], result: pass}
- {kind: Pod, policy: check-env-vars, resources: [pod-with-opa-disabled, pod-without-opa-env], result: pass}
